--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -1,5 +1,8 @@
 // Color
-$red: #012e65
+$main-color: #333333
+$co-color: #222222
+$blue: #0f6cb2
+$yellow: #fdd922
 $deep-blue: #19233c
 $light-green: #00ffe4
 $grey: #b7b7b7
@@ -27,6 +30,25 @@ $text-black: #464646
 		right: 0
 		bottom: 0
 // CSS
+.tutorial
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	align-items: middle
+	background: rgba(51, 51, 51, 0.7)
+	z-index: 999999
+	img
+		display: block
+		position: absolute
+		top: 50%
+		left: 50%
+		-moz-transform: translateX(-50%) translateY(-50%)
+		-webkit-transform: translateX(-50%) translateY(-50%)
+		-o-transform: translateX(-50%) translateY(-50%)
+		-ms-transform: translateX(-50%) translateY(-50%)
+		transform: translateX(-50%) translateY(-50%)
 .bg_red
 	background: red
 .bg_blue
@@ -35,15 +57,16 @@ $text-black: #464646
 	color: $light-green
 .col-nav
 	width: 294px
-	overflow: hidden
 	float: left
 	margin: 0 !important
 	button
 		margin-right: 0
 a
 	text-decoration: none !important
+.box-shadow
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.2)
 .part
-	padding-top: 20px
+	margin-top: 20px
 .l
 	display: inline-block
 	background-image: url(../images/list-min.png)
@@ -89,20 +112,19 @@ a
 .owl-wrapper
 	position: relative
 	.customNavigation
+		margin: 0 15px
 		.btn
-			position: absolute
 			display: inline-block
-			top: 50%
-			z-index: 10
-			transform: translateY(-50%)
 			outline: none !important
 			box-shadow: none !important
+			margin: 14px 5px
+			background: white
+			border-radius: 100px
+			padding: 0
 			.material-icons
-				font-size: 70px
-			&.prev
-				left: 0
-			&.next
-				right: 0
+				font-size: 22px
+				color: $main-color
+				@include transition(all, .3s, ease-in-out)
 		&.style1
 			.btn
 				.material-icons
@@ -118,24 +140,50 @@ a
 					left: -40px
 				&.next
 					right: -40px
+		&.style3
+			text-align: center
+			.btn
+				margin-top: 0
+				margin-bottom: 0
+				&:hover
+					.material-icons
+						color: $blue
+						border-radius: 100px
+						background: $light-grey
 .courses
-	.owl-wrapper
-		padding: 0px 40px
+	background: white
+	.square_box
+		display: inline-block
+		float: left
+		height: 52px
+		width: 52px
+		text-align: center
+		line-height: 52px
+		background: $blue
+	.owl-stage
+		padding-top: 10px
+		padding-bottom: 10px
 	nav.navbar
-		background: $white-grey
+		background: $main-color
 		border-radius: 0
-		border: none
+		border-bottom: solid 2px $blue
+		border-top: none
+		border-left: none
 		a
-			color: $text-black
+			color: white
 			height: 52px
+			&:hover
+				color: $yellow
 		.material-icons
 			vertical-align: middle
+			color: white
 		.navbar-brand
 			font-size: 14px
 			font-weight: 500
 			text-transform: uppercase
 			padding-top: 10px
 			padding-bottom: 10px
+			line-height: 2.5
 			.material-icons
 				font-size: 30px
 				margin-right: 10px
@@ -153,29 +201,102 @@ a
 						content: ''
 						width: 1px
 						height: 16px
-						background: $grey
+						background: $text-black
+						opacity: 0.5
 						top: 50%
 						right: 0
 						transform: translateY(-50%)
 					> .material-icons
 						margin-right: 5px
-						color: $red
+						color: $main-color
 					.badge
 						font-weight: 300
-						background: $red
+						background: $blue
 						padding: 5px 10px
 						border-radius: 50px
+						color: white
 						.material-icons
 							font-size: 16px
 							margin-left: 5px
+							color: white
 				&:last-child a::after
 					width: 0
+		.navbar-right
+			float: right!important
+			margin: 0
+			li
+				display: inline-block
+		.navbar-header
+			float: left
+	.wrapper_content
+		padding-left: 30px
+		padding-right: 30px
+		padding-bottom: 30px
+		@extend .box-shadow
 .course
+	position: relative
+	.tag
+		display: block
+		position: absolute
+		z-index: 1
+		font-size: 12px
+		background: transparent
+		top: -5px
+		left: 5px
+		text-transform: uppercase
+		color: white
+		font-weight: 600
+		> span
+			display: block
+			text-align: center
+			position: relative
+			width: 40px
+			height: 56px
+			border-top-right-radius: 5px
+			border-top-left-radius: 5px
+			line-height: 4
+			filter: drop-shadow(2px 3px 3px rgba(0,0,0,0.5))
+			&::before, &::after
+				position: absolute
+				content: ''
+				z-index: -1
+				width: 0
+				height: 0
+				border-style: solid
+				bottom: -10px
+			&::before
+				border-width: 10px 20px 0 0
+				border-color: red transparent transparent transparent
+				left: 0
+			&::after
+				border-width: 0 20px 10px 0
+				border-color: transparent red transparent transparent
+				right: 0
+			&.tag-new
+				background: #458902 !important
+				&::before
+					border-top-color: #458902 !important
+				&::after
+					border-right-color: #458902 !important
+			&.tag-hot
+				background: #fd3c22 !important
+				&::before
+					border-top-color: #fd3c22 !important
+				&::after
+					border-right-color: #fd3c22 !important
+			&.tag-sale
+				background: #fdeb22 !important
+				color: $text-black
+				&::before
+					border-top-color: #fdeb22 !important
+				&::after
+					border-right-color: #fdeb22 !important
 	.thumbnail
 		padding: 0
 		border-radius: 0
-		box-shadow: 2px 2px 8px rgba(0,0,0,0.1)
+		margin-bottom: 0
 		line-height: 1
+		border: none
 		@include transition(all, .3s, linear)
 		cursor: pointer
 		overflow: hidden
@@ -184,6 +305,7 @@ a
 			overflow: hidden
 			img
 				object-fit: cover
+				height: 100%
 		.caption
 			padding: 10px
 			overflow: hidden
@@ -218,15 +340,35 @@ a
 							font-size: 20px
 							vertical-align: bottom
 							@include transition(all, .5s, linear)
+					.view
+						display: block
+						font-size: 12px
+						color: #cecece
+						font-weight: 300
+						.material-icons
+							font-size: 14px
+							vertical-align: sub
 					.shopping
 						.material-icons
 							color: #66c366
 					.like
 						.material-icons
 							color: #d75a4a
+		&.video
+			*
+				line-height: 1.3
+			.caption
+				h3
+					font-size: 18px
+				.author_time
+					margin: 10px 0
+					color: $grey
+				.info
+					text-align: justify
+					padding-bottom: 20px
+					font-weight: 500
 	&:hover
 		.thumbnail
-			box-shadow: 2px 2px 8px rgba(0,0,0,0.3)
 			.caption
 				.info
 					.rate-price
@@ -244,7 +386,7 @@ a
 				.material-icons
 					font-size: 24px
 	.course
-		.thumbnail
+		.thumbnail:not(.video)
 			overflow: hidden
 			.img_thumbnail
 				display: inline-block
@@ -261,7 +403,7 @@ a
 				height: 90px
 				overflow: hidden
 			.caption
-				display: inline-block
+				display: iThắng-block
 				width: calc(100% - 90px)
 				width: -moz-calc(100% - 90px)
 				width: -webkit-calc(100% - 90px)
@@ -280,6 +422,145 @@ a
 					line-height: 1
 					.material-icons
 						font-size: 14px
+.course_list_2
+	.course
+		.media
+			overflow: inherit
+			padding-right: 20px
+			&:last-child
+				margin-top: 30px
+			.img_thumbnail
+				@include aspect-ratio(16,9)
+				overflow: hidden
+				width: 188px
+				@extend .box-shadow
+				img
+					object-fit: cover
+					height: 100%
+					position: absolute
+			.media-body
+				font-size: 14px
+				margin: 0
+				h3
+					font-size: 14px
+					margin: 0
+				.author
+					font-size: 12px
+					margin: 5px 0
+					color: $grey
+					font-weight: 300
+				.info
+					> div
+						display: inline-block
+					.rate-price
+						.material-icons
+							font-size: 18px
+							color: $main-color
+					.buy
+						float: right
+						text-align: right
+						.view
+							display: block
+							text-align: right
+							font-size: 12px
+							color: $grey
+							.material-icons
+								font-size: 12px
+								vertical-align: middle
+						a
+							display: inline-block
+							.material-icons
+								font-size: 20px
+							&.shopping
+								color: #66c366
+							&.like
+								color: #d75a4a
+@media screen and (max-width: 544px)
+	.course_list_2
+		.course
+			.media
+				padding-right: 0
+				.img_thumbnail
+					width: 90px
+					@include aspect-ratio(1, 1)
+				.media-body
+					h3
+						font-size: 12px
+/* switch toggle */
+.cmn-toggle
+	position: absolute
+	margin-left: -9999px
+	visibility: hidden
+.cmn-toggle + label
+	display: block
+	position: relative
+	cursor: pointer
+	outline: none
+	-webkit-user-select: none
+	-moz-user-select: none
+	-ms-user-select: none
+	user-select: none
+input.cmn-toggle-round + label
+	padding: 2px
+	width: 100px
+	height: 30px
+	background-color: $blue
+	-webkit-border-radius: 60px
+	-moz-border-radius: 60px
+	-ms-border-radius: 60px
+	-o-border-radius: 60px
+	border-radius: 60px
+	margin: 0
+input.cmn-toggle-round + label:before, input.cmn-toggle-round + label:after
+	display: block
+	position: absolute
+	top: 1px
+	left: 1px
+	bottom: 1px
+	content: ""
+input.cmn-toggle-round + label:before
+	right: 1px
+	content: 'Register'
+	line-height: 30px
+	text-align: right
+	background-color: $blue
+	-webkit-border-radius: 60px
+	-moz-border-radius: 60px
+	-ms-border-radius: 60px
+	-o-border-radius: 60px
+	border-radius: 60px
+	-webkit-transition: all 0.4s
+	-moz-transition: all 0.4s
+	-o-transition: all 0.4s
+	transition: all 0.4s
+	font-weight: 300
+	padding: 0 10px
+input.cmn-toggle-round + label:after
+	width: 20px
+	height: 20px
+	margin-top: 4px
+	margin-left: 5px
+	background-color: #fff
+	-webkit-border-radius: 100%
+	-moz-border-radius: 100%
+	-ms-border-radius: 100%
+	-o-border-radius: 100%
+	border-radius: 100%
+	-webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3)
+	-moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3)
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3)
+	-webkit-transition: margin 0.4s
+	-moz-transition: margin 0.4s
+	-o-transition: margin 0.4s
+	transition: margin 0.4s
+input.cmn-toggle-round:checked + label:before
+	background-color: $yellow
+	content: ''
+	text-align: left
+input.cmn-toggle-round:checked + label
+	background: $yellow
+input.cmn-toggle-round:checked + label:after
+	margin-left: 70px
 /* body */
 body
 	font-size: 14px
@@ -291,35 +572,74 @@ body
 /* header */
 #navigation
 	nav
-		border-bottom: solid 1px $grey
-		background: white
+		background: $main-color
 		margin: 0
+		color: white
 		.navbar-header
 			text-align: center
 			.navbar-brand
 				padding: 0
 				margin: 0 auto
-				height: 58px
 				line-height: 70px
 				float: none
 				display: block
+		a
+			color: white
+			&:hover
+				color: $yellow
+		.list-menu-top
+			li
+				a
+					font-size: 12px
+					font-weight: 300
+					background: transparent
+					padding-top: 0
+					padding-bottom: 0
+					line-height: 2
+					position: relative
+				&:not(:last-child) a
+					&::after
+						position: absolute
+						content: ''
+						width: 1px
+						height: 12px
+						top: 50%
+						transform: translateY(-50%)
+						right: 0
+						background: white
 		form
 			height: 58px
 			line-height: 50px
 			margin: 0
+			padding: 0
 			.form-group
 				float: left
+				.input-group-addon
+					padding: 0
+					border: 0
+					border-radius: 0
+					&:first-child
+						background: $blue
+						padding-left: 30px
+						padding-right: 30px
+						color: white
 				input
 					width: 30vw
 					border-radius: 0px
 			.btn-search
-				background: $red
+				background: $blue
 				padding: 0
-				width: 130px
+				width: 51px
 				height: 34px
 				border-radius: 0px
 				margin-left: -5px
 				line-height: 39px
+				.i
+					-moz-transform: scale(0.8)
+					-webkit-transform: scale(0.8)
+					-o-transform: scale(0.8)
+					-ms-transform: scale(0.8)
+					transform: scale(0.8)
 		.navbar-right
 			margin-right: 0px
 		.infor-user
@@ -340,20 +660,52 @@ body
 					padding-top: 8px
 					padding-bottom: 8px
 					line-height: 1
+			.switch
+				margin: 10px 15px
+	.menu
+		background: $co-color
+		overflow: hidden
+		text-align: center
+		overflow: hidden
+		.navbar-nav
+			margin: 0 auto
+			display: inline-block
+			float: none
+		a
+			color: white
+			text-align: center
+			background: transparent
+			font-size: 12px
+			font-weight: 400
+			padding-top: 0
+			padding-bottom: 0
+			line-height: 3
+			&:hover
+				color: $yellow
+#nav_mob
+	clear: both
+	.list-group
+		.list-group-item
+			border: none
+			font-size: 12px
+			font-weight: 300
+			background: transparent
+			.material-icons
+				font-size: 14px
+				vertical-align: sub
+				margin-right: 10px
 /* main */
 #main
-	margin-top: 60px
+	background: #f0f0f0
 /* aside */
 #nav_aside
-	position: fixed
 	height: calc(100vh - 58px)
-	border-right: solid 1px $grey
-	// overflow-y: scroll
 	z-index: 100
-	background: white
-	padding: 22px 30px
+	padding: 22px 15px
+	.list-group-item
+		border-radius: 0
 	.panel-heading
-		background: $red
+		background: $main-color
 		color: white
 		border-radius: 0
 		padding-top: 8px
@@ -390,10 +742,38 @@ body
 		&.control
 			float: right
 			text-align: right
+	.banner_ads
+		margin-bottom: 20px
+		a
+			display: block
+			img
+				width: 100%
+	.owl-wrapper
+		margin-bottom: 20px
+		.thumbanil_author
+			.thumbnail
+				margin-top: 15px
+				padding: 0
+				border: 0
+				margin-bottom: 0
+				img
+					width: auto
+				.caption
+					text-align: center
+					.author
+						font-size: 16px
+						margin: 15px 0 0 0
+					.author_info
+						font-size: 12px
+						color: #7e7e7e
+						font-style: italic
+					p
+						font-weight: 300
+						text-align: justify
+						font-size: 13px
+						line-height: 1.3
 /* course_table */
 #course_table
-	padding-left: 294px
-	background: white
 	overflow: hidden
 	nav.navbar.course_table_nav
 		height: 36px
@@ -401,14 +781,16 @@ body
 		border-bottom: solid 1px $light-grey
 		margin: 0
 		a
-			color: $red
+			color: $main-color
 		.navbar-nav
 			margin: 0 auto
 			float: none
 			display: inline-block
 	.content
-		padding: 24px 30px
+		padding: 22px 15px
 		.slide
+			img
+				width: 100%
 			.carousel-control.left, .carousel-control.right
 				background: transparent
 			.carousel-control
@@ -426,11 +808,11 @@ body
 	.carousel-indicators
 		bottom: 0
 		li
-			border-color: $red
+			border-color: $main-color
 			@include transition(all, .3s, linear)
 		.active
 			width: 30px
-			background-color: $red
+			background-color: $main-color
 #banner_slide
 	position: relative
 	.item
@@ -466,12 +848,10 @@ body
 					background: rgba(0, 0, 0, 0.4)
 #ads
 	figure
-		padding: 0 40px
 		img
 			width: 100%
 			height: auto
 #footer
-	padding-left: 294px
 	overflow: hidden
 	background: #2b2b2b
 	color: white
@@ -479,7 +859,7 @@ body
 		list-style: none
 		padding: 0
 	#email_row
-		background: $red
+		background: $blue
 		color: white
 		overflow: hidden
 		padding-top: 10px
@@ -502,11 +882,12 @@ body
 				border-bottom-left-radius: 0
 				border-top-right-radius: 10px
 				border-bottom-right-radius: 10px
-				background: #f7941d
-				color: white !important
+				background: $yellow
+				color: $text-black
 				padding-left: 20px
 				padding-right: 20px
 				margin-left: -5px
+				outline: none !important
 		span
 			line-height: 34px
 	.col-left
@@ -586,6 +967,9 @@ body
 		.col-nav
 			button
 				display: block
+		.navbar-brand
+			img
+				margin-top: 12px
 		form
 			display: none
 		.infor-user
@@ -597,9 +981,6 @@ body
 	#footer
 		padding-left: 0
 @media screen and (max-width: 768px)
-	.courses
-		.navbar-right
-			display: none
 	#slide
 		.carousel-control, .carousel-indicators
 			display: none
@@ -614,5 +995,3 @@ body
 				line-height: 24px
 @media screen and (max-height: 600px)
 	#nav_aside
-		// display: scroll
-		overflow-y: scroll
